# rfb-cnpj

./: .gitignore  README.md  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/analyses/: query_by_cnae.sql  query_by_cnpjs.sql
dbt/models/bronze/: csv_cnae.sql  csv_empresa.sql  csv_estabelecimento.sql  csv_motivo.sql  csv_municipio.sql  csv_natureza_juridica.sql  csv_pais.sql  csv_regime_tributacao.sql  csv_simples.sql
dbt/models/gold/: v_empresa.sql  v_estabelecimento.sql
dbt/models/silver/: cnae.sql  empresa.sql  estabelecimento.sql  municipio.sql  natureza_juridica.sql  pais.sql  regime_tributacao.sql  simples.sql
rfb_cnpj/: build.py
